fix css and trim a div's text

--- a/graph.html
+++ b/graph.html
@@ -32,7 +32,7 @@
     <div id="page-body">
         <div id="visualization">
             <svg id="svg-container">
-                <text id="overlay-title" x="10" y="50"> SQLI </text>
+                <text id="overlay-title" x="10" y="50">SQLI</text>
                 <rect id="overlay-rect" width="180" height="80" x="0" y="0"></rect>
 
                 <rect id="error-free-rect" class="legend-rect error-free-color" width="50" height="20" x="15" y="480"></rect>
@@ -40,18 +40,16 @@
                 <rect id="skipfish-rect" class="legend-rect skipfish-color" width="50" height="20" x="15" y="540"></rect>
                 <rect id="wapiti-rect" class="legend-rect wapiti-color" width="50" height="20" x="15" y="570"></rect>
 
-                <text class="legend-text" x="75" y="495"> NO ERROR </text>
-                <text class="legend-text" x="75" y="525"> ARACHNI </text>
-                <text class="legend-text" x="75" y="555"> SKIPFISH </text>
-                <text class="legend-text" x="75" y="585"> WAPITI </text>
+                <text class="legend-text" x="75" y="495">NO ERROR</text>
+                <text class="legend-text" x="75" y="525">ARACHNI</text>
+                <text class="legend-text" x="75" y="555">SKIPFISH</text>
+                <text class="legend-text" x="75" y="585">WAPITI</text>
 
                 <g id="graph"></g>
             </svg>
         </div>
         <div id="info-board">
-            <div id="url-container">
-                CLICK A NODE
-            </div>
+            <div id="url-container">CLICK A NODE</div>
             <div id="list-container">
             </div>
         </div>
