Clickable query string in detail pane

--- a/graph.html
+++ b/graph.html
@@ -8,6 +8,10 @@
         src="js\d3.v3.min.js"
         charset="utf-8">
     </script>
+	<script
+        src="js\mustache.js"
+        charset="utf-8">
+    </script>
     <script
         src="output.js"
         charset="utf-8">
