add urls dropdownlist

--- a/graph.html
+++ b/graph.html
@@ -64,5 +64,7 @@
           <option value="XSS">XSS</option>
           <option value="BOTH">BOTH</option>
         </select>
+        <select id="urls-select">
+        </select>
     </div>
 </body>
