add label to control panel

--- a/graph.html
+++ b/graph.html
@@ -59,11 +59,14 @@
         </div>
     </div>
     <div id="control-panel">
+        <div class="label">VIEW MODE:</div>
         <select id="mode-select">
           <option value="SQLI">SQLI</option>
           <option value="XSS">XSS</option>
           <option value="BOTH">BOTH</option>
         </select>
+        <br>
+        <div class="label">SELECTED URL:</div>
         <select id="urls-select">
         </select>
     </div>
