escape double quotes for js and add w3af to visualizer.ks

--- a/graph.html
+++ b/graph.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <head>
     <meta charset="utf-8">
     <title>Sakura Vulnerabilities Visualizer</title>
@@ -41,12 +41,12 @@
 
                 <rect id="error-free-rect" class="legend-rect error-free-color" width="50" height="20" x="15" y="480"></rect>
                 <rect id="arachni-rect" class="legend-rect arachni-color" width="50" height="20" x="15" y="510"></rect>
-                <rect id="skipfish-rect" class="legend-rect skipfish-color" width="50" height="20" x="15" y="540"></rect>
+                <rect id="w3af-rect" class="legend-rect w3af-color" width="50" height="20" x="15" y="540"></rect>
                 <rect id="wapiti-rect" class="legend-rect wapiti-color" width="50" height="20" x="15" y="570"></rect>
 
                 <text class="legend-text" x="75" y="495">NO ERROR</text>
                 <text class="legend-text" x="75" y="525">ARACHNI</text>
-                <text class="legend-text" x="75" y="555">SKIPFISH</text>
+                <text class="legend-text" x="75" y="555">W3AF</text>
                 <text class="legend-text" x="75" y="585">WAPITI</text>
 
                 <g id="graph"></g>
