--- a/graph.html
+++ b/graph.html
@@ -40,14 +40,14 @@
                 <rect id="overlay-rect" width="180" height="80" x="0" y="0"></rect>
 
                 <rect id="error-free-rect" class="legend-rect error-free-color" width="50" height="20" x="15" y="480"></rect>
-                <rect id="arachni-rect" class="legend-rect arachni-color" width="50" height="20" x="15" y="510"></rect>
-                <rect id="w3af-rect" class="legend-rect w3af-color" width="50" height="20" x="15" y="540"></rect>
                 <rect id="wapiti-rect" class="legend-rect wapiti-color" width="50" height="20" x="15" y="570"></rect>
+                <rect id="w3af-rect" class="legend-rect w3af-color" width="50" height="20" x="15" y="540"></rect>
+                <rect id="arachni-rect" class="legend-rect arachni-color" width="50" height="20" x="15" y="510"></rect>
 
-                <text class="legend-text" x="75" y="495">NO ERROR</text>
-                <text class="legend-text" x="75" y="525">ARACHNI</text>
-                <text class="legend-text" x="75" y="555">W3AF</text>
-                <text class="legend-text" x="75" y="585">WAPITI</text>
+                <text class="legend-text" id="no-error-text">NO ERROR</text>
+                <text class="legend-text" id="wapiti-text">WAPITI</text>
+                <text class="legend-text" id="w3af-text">W3AF</text>
+                <text class="legend-text" id="arachni-text">ARACHNI</text>
 
                 <g id="graph"></g>
             </svg>
