Filter the url list with string

--- a/graph.html
+++ b/graph.html
@@ -66,8 +66,10 @@
           <option value="BOTH">BOTH</option>
         </select>
         <br>
-        <div class="label">SELECTED URL:</div>
+        <div class="label">URL LIST:</div>
         <select id="urls-select">
         </select>
+        <div class="label">FILTERED WITH:</div>
+        <input id="url_filter_field"></input>
     </div>
 </body>
